changed from using send function as a route to an api call(and added api folder)

--- a/smart_librarian/templates/index.html
+++ b/smart_librarian/templates/index.html
@@ -245,7 +245,7 @@
       input.value = '';
 
       try{
-        const res = await fetch(`/home/api/send`, {
+        const res = await fetch(`/api/send`, {
           method:'POST',
           headers:{'Content-Type':'application/json'},
           body:JSON.stringify({message:text})
